# cellophane

./: .gitignore  .pre-commit-config.yaml  README.md  USAGE.md  __init__.py  __main__.py  pyproject.toml  requirements.dev.txt  requirements.txt  schema.base.yaml
.github/: release-drafter.yml
.github/workflows/: def_poetry.yml  def_publish-release.yml  def_pytest.yml  def_release-pr.yml  def_reviewdog-lint.yml  def_rye.yml  def_semver.yml  mega-linter.yml  poetry-version.yml  pr-close-main.yml  pr-open-dev.yml  pr-open-main.yml  push-dev.yml  pytest.yml  release-drafter.yml  workflow.yml
cellophane/: .gitignore  __init__.py  __main__.py  cellophane.py  schema.base.yaml
cellophane/src/: cfg.py  data.py  executors.py  logs.py  modules.py  sge.py  util.py
cellophane/src/cfg/: __init__.py  _click.py  _jsonschema.py  click_.py  config.py  flag.py  jsonschema_.py  schema.py  util.py  with_options.py
cellophane/src/cleanup/: cleanup.py
cellophane/src/data/: container.py  exceptions.py  merger.py  output.py  samples.py  util.py
cellophane/src/dev/: cli.py  exceptions.py  repo.py  util.py
cellophane/src/executors/: __init__.py  executor.py  mock_executor.py  subprocess_executor.py  util.py
cellophane/src/logs/: __init__.py  util.py
cellophane/src/modules/: __init__.py  checkpoint.py  decorators.py  hook.py  load.py  runner_.py
cellophane/src/testing/: __init__.py  fixture.py  instrumentation.py  mock_executor.py  util.py
cellophane/src/testing/instrumentation/: __init__.py
cellophane/src/util/: __init__.py  freeze.py  mappings.py  misc.py
cellophane/template/: __main__.py  entrypoint.py  module_requirements.txt  requirements.txt
cellophane/template/modules/: requirements.txt
src/: cfg.py  data.py  logs.py  modules.py  sge.py  slims.py  util.py
src/cellophane/: __init__.py  cellophane.py
src/cellophane/cfg/: __init__.py  click_.py  config.py  jsonschema_.py  schema.py  util.py  with_options.py
src/cellophane/cleanup/: __init__.py
src/cellophane/data/: __init__.py  output.py
src/cellophane/dev/: __init__.py
src/cellophane/executors/: executor.py  mock_executor.py  subprocess_executor.py
src/cellophane/executors/scripts/: bootstrap_micromamba.sh
src/cellophane/modules/: checkpoint.py  decorators.py  hook.py  load.py  runner_.py
src/cellophane/template/: __main__.py
src/cellophane/util/: freeze.py
template/: __main__.py  entrypoint.py
tests/: test_cellophane.py  test_cfg.py  test_data.py  test_dev.py  test_executors.py  test_logs.py  test_modules.py  test_sge.py  test_util.py
tests/lib/config/: samples.yaml  simple.yaml
tests/lib/integration/: bad_args.yaml  bad_hook_order.yaml  bad_keyboard_interrupt.yaml  bad_merge_unhandled_exception.yaml  bad_missing_config.yaml  bad_missing_file.yaml  bad_module.yaml  bad_runner_unhandled_exception.yaml  bad_sample.yaml  bad_schema.yaml  bad_unhandeled_exception.yaml  bad_unhandled_exception.yaml  cfg.yaml  cleanup.yaml  exceptions.yaml  executor.yaml  failed_sample.yaml  good_basic.yaml  good_checkpoint.yaml  good_cleanup.yaml  good_config_override.yaml  good_executor.yaml  good_hooks.yaml  good_merge.yaml  good_no_runners.yaml  good_outputs.yaml  good_parse_config.yaml  good_split.yaml  good_tutorial.yaml  hooks.yaml  merge.yaml  no_sample_files.yaml  runner_unhandled_exception.yaml  serialize.yaml  split.yaml
tests/lib/integration/instrumentation/: __init__.py  schema.yaml
tests/lib/modules/: mod_basic.py  mod_invalid_import.py  mod_mixin.py
tests/lib/modules/mod_basic/: module.py
tests/lib/modules/mod_basic/modules/: module.py
tests/lib/modules/mod_directory/: __init__.py
tests/lib/modules/mod_directory/directory/: __init__.py
tests/lib/modules/mod_directory/module/: __init__.py
tests/lib/modules/mod_directory/modules/directory/: __init__.py
tests/lib/modules/mod_invalid/: invalid.py
tests/lib/modules/mod_mixin/modules/: mixin.py
tests/lib/modules/mod_override_logging/: module.py  override_logging.py
tests/lib/repo/: modules.json
tests/lib/schema/: config_simple.yaml  default.yaml  gen_array.yaml  gen_basic.yaml  gen_mapping.yaml  gen_nested.yaml  gen_no_default.yaml  multiple.yaml  nested.yaml  parent_required.yaml  required.yaml
tests/lib/schema/config/: from_cli.yaml  from_data.yaml  from_kwargs.yaml  simple.yaml
tests/lib/schema/flags/: all_of.yaml  any_of.yaml  default.yaml  dependent_required.yaml  dependent_schemas.yaml  if_else.yaml  if_then_else.yaml  invalid_default_type.yaml  multiple.yaml  nested.yaml  nested_conditional.yaml  nested_required.yaml  one_of.yaml  parent_required.yaml  required.yaml  required_default.yaml  typed_array.yaml
tests/lib/schema/parse/: merge_a.yaml  merge_b.yaml  merge_c.yaml  merge_d.yaml  nested.yaml
tests/lib/util/: DUMMY.py
