[tool.poetry]
name = "cellophane"
version = "1.2.0-dev"
description = "Library for wrappers integrating with SLIMS"
authors = ["Erik Demitz-Helin <erik.demitz-helin@gu.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
psutil = "^5.9.4"
rich-click = "^1.6.0"
humanfriendly = "^10.0"
jsonschema = "^4.17.3"
attrs = "^23.1.0"
ruamel-yaml = "^0.17.32"
mpire = {extras = ["dill"], version = "^2.8.0"}
gitpython = "^3.1.31"
questionary = "^2.0.1"
frozendict = "^2.3.8"
semver = "^3.0.2"
packaging = "^24.0"
xxhash = "^3.4.1"
pytest-profiling = "^1.7.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
bandit = "^1.7.4"
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^8.3.3"
pytest-mock = "^3.10.0"
pytest-cov = "^4.1.0"
isort = "^5.12.0"
pytest-repeat = "^0.9.1"
pytest-clarity = "^1.0.1"
pytest-xdist = "^3.3.1"
types-jsonschema = "^4.19.0.3"
types-humanfriendly = "^10.0.1.10"
types-psutil = "^5.9.5.16"
pylint = "^3.0.2"
pre-commit = "^3.6.0"
pytest-env = "^1.1.5"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true


[[tool.mypy.overrides]]
module = [
    "dill",
    "mpire",
    "mpire.exception",
    "mpire.async_result",
    "jsonschema",
]
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "referencing.jsonschema"
ignore_errors = true

[tool.coverage.run]
omit = [
    "cellophane/src/testing/*",
    "cellophane/__main__.py"
]
concurrency = [
    "multiprocessing",
    "thread"
]
branch = true

[tool.coverage.report]
omit = ["**/pytest-*/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = """
    --cov cellophane
    --cov-report term-missing
    --dist loadfile -n 2
    """

[tool.pytest_env]
TERM = "dumb"
COLUMNS = "500"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
exit-zero = true
fail-on = ["F","E","W"]
